package com.designpattern.behavioral.strategy.strategies;

/**
 * @Auther: ZhengHuaJing
 * @Date: 2020/10/14 16:17
 * @Description:
 */
public interface Strategy {
    int doOperation(int num1, int num2);
}
